# rest_app_template

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Readme.md  config.toml  config_loader.py  main.py  pyproject.toml
app/: build_app.py  dependencies.py  settings.py
app/api/: models.py  routes.py  urls.py
app/db/repositories/email/: exceptions.py  repo.py
app/entities/: base.py  email.py  enums.py
app/services/: interfaces.py
app/utils/: exception_wrapper.py
migrations/: changelog.xml
migrations/sql/: 001_INIT_MIGRATION.sql
tests/functional/: config.toml  docker-compose.local.yml  docker-compose.yml  init.sql  run.local.sh
tests/functional/src/: conftest.py  test_email.py  test_ping.py
tests/functional/src/utils/: db.py
tests/functional/waiters/: wait-for.sh  wait_for_service.py
tests/unit/: conftest.py  testdata.py
tests/unit/app/: conftest.py  test_routes.py  testdata.py
tests/unit/repository/: conftest.py  test_email.py
